--- a/config.yaml
+++ b/config.yaml
@@ -91,10 +91,10 @@ params:
           Our [community efforts]({{< relref "/community" >}}) focus
           on broadening participation and better coordinating volunteer efforts.
 
-        #      - title: Maintenance & Support
+        #      - title: Tools
         #        text: |
-        #          We [maintain and support]({{< relref "/maintenance" >}})
-        #          several libraries and tools in the ecosystem.
+        #          We maintain a collection of [tools]({{< relref "/tools" >}})
+        #          used across the ecosystem.
 
   footer:
     logo: logo.svg
