--- a/config.yaml
+++ b/config.yaml
@@ -78,7 +78,7 @@ params:
         text: |
           One of our current focuses is on improving and maintaining the
           [sparse array]({{< relref "/grants/sparse_arrays/" >}}) capabilities and
-          inter-operability in the ecosystem.
+          interoperability in the ecosystem.
       - title: Community
         text: |
           Our [community efforts]({{< relref "/community" >}}) focus
