--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -14,3 +14,18 @@ events:
       interval:
         days: 7
       until: 2025-12-31 00:00:00
+
+  - summary: NetworkX Dispatching Call
+    description: |
+      Discuss NetworkX dispatching development and plugins such as GraphBLAS, cugraph, and nx-parallel.
+
+      Meeting link: https://anaconda.zoom.us/j/94192874965?pwd=K0wvcmhXem41ZlVSQ2l4TXlUaDgxdz09
+      Zoom meeting ID: 941 9287 4965
+      Zoom meeting passcode: 572126
+    begin: 2023-07-27 07:00:00
+    end: 2023-07-27 08:00:00
+    url: https://anaconda.zoom.us/j/94192874965?pwd=K0wvcmhXem41ZlVSQ2l4TXlUaDgxdz09
+    repeat:
+      interval:
+        days: 14
+      until: 2025-12-31 00:00:00
