--- a/calendars/sparse-array.yaml
+++ b/calendars/sparse-array.yaml
@@ -14,4 +14,32 @@ events:
     repeat:
       interval:
         days: 14
+      until: 2023-08-05 00:00:00
+  - summary: Sparse Array discussions
+    description: |
+      Followup meetings from the Scientific Python Summit
+      and topics about implementing sparse arrays
+
+      Meeting Link:  https://meet.google.com/qvk-bydd-tem
+      Meeting notes: https://hackmd.io/9UCjKdRUTEeoS8KdQNll-A
+    begin: 2023-08-25 14:00:00
+    end: 2023-08-25 15:00:00
+    url: https://meet.google.com/qvk-bydd-tem
+    repeat:
+      interval:
+        days: 14
+      until: 2023-09-09 00:00:00
+  - summary: Sparse Array discussions
+    description: |
+      Followup meetings from the Scientific Python Summit
+      and topics about implementing sparse arrays
+
+      Meeting Link:  https://meet.google.com/qvk-bydd-tem
+      Meeting notes: https://hackmd.io/9UCjKdRUTEeoS8KdQNll-A
+    begin: 2023-09-15 14:00:00
+    end: 2023-09-15 15:00:00
+    url: https://meet.google.com/qvk-bydd-tem
+    repeat:
+      interval:
+        days: 14
       until: 2025-12-31 00:00:00
