Use olson time zone identifier

--- a/calendars/graphblas.yaml
+++ b/calendars/graphblas.yaml
@@ -1,5 +1,5 @@
 name: GraphBLAS Community Calendar
-timezone: US/Pacific
+timezone: America/Los_Angeles
 events:
   - summary: Python-graphblas Community Call
     description: |
