--- a/calendars/networkx.yaml
+++ b/calendars/networkx.yaml
@@ -1,5 +1,5 @@
 name: NetworkX Community Calendar
-timezone: US/Pacific
+timezone: America/Los_Angeles
 events:
   - summary: NetworkX Community Call (Americas/Oceania)
     description: |
