--- a/calendars/skimage.yaml
+++ b/calendars/skimage.yaml
@@ -26,3 +26,13 @@ events:
       interval:
         days: 14
       until: 2025-01-01 00:00:00 +00:00
+  - summary: "skimage core team: 2.0 transition"
+    description: |
+      Plan for the upcoming skimage2 release.
+
+      - transition plan
+      - open issues / decisions
+      - work division and schedule
+      - questions
+    begin: 2024-01-29 20:00:00 +00:00
+    end: 2024-01-29 21:00:00 +00:00
